# MotorDriverCard

./: .gitignore  .jenkinsfile  CMakeLists.txt  DFMC_MD22Dummy.cc  DummyDevice.cc  FindMotorDriverCard.cmake  Logger.cc  MotorControler.cc  MotorControlerConfig.cc  MotorControlerImpl.cc  MotorDriverCardConfig.cc  MotorDriverCardConfig.cmake  MotorDriverCardConfigVersion.cmake  MotorDriverCardConfigXML.cc  MotorDriverCardImpl.cc  MultiVariableWord.cc  SPIviaPCIe.cc  SignedIntConverter.cc  StepperMotorStatus.cc  motorcardconfig.rng
ConfigCalculator/: CMakeLists.txt
ConfigCalculator/GUI/: CMakeLists.txt  HexSpinBox.cpp  HexSpinBox.h  MotorConfigWidget.cc  MotorConfigWidget.h  MotorConfigWidget.ui  ParameterWidget.cc  ParameterWidget.h  ParametersPanel.cc  ParametersPanel.h  QtConfigCalculator.cc  QtConfigCalculator.h  QtConfigCalculator_main.cpp  QtMotorConfigCalculator.cc  QtMotorConfigCalculator.h  QtMotorConfigCalculator.qrc  QtMotorConfigCalculator_main.cpp  VariantUserTypes.h  getParameters.cc  getParameters.h  populateMotorExpertPanel.cc  populateMotorExpertPanel.h  populatePanels.cc  populatePanels.h
ConfigCalculator/executables/: ConfigCalculatorCLI.cpp  MotorConfigWidget.ui  write_default_config.cpp
ConfigCalculator/include/: ConfigCalculator.h  ParametersCalculator.h  RegisterValuesCalculator.h
ConfigCalculator/src/: ConfigCalculator.cc  ParametersCalculator.cc  RegisterValuesCalculator.cc
ConfigCalculator/tests/: generatedVT21Config.xml  testConfigCalculatorCLI.sh  testMotorConfigCalculator.sh
ConfigCalculator/tests/src/: testCalculateConfig.cpp  testCalculateParameters.cpp  testCalculateRegisterValues.cpp
backend/include/: DFMC_MD22Constants.h  DFMC_MD22Dummy.h  MotorControler.h  MotorControlerConfig.h  MotorControlerConfigDefaults.h  MotorControlerDummy.h  MotorControlerExpert.h  MotorDriverCard.h  MotorDriverCardConfig.h  MotorDriverCardConfigDefaults.h  MotorDriverCardConfigXML.h  MotorDriverCardDummy.h  MotorDriverCardExpert.h  MotorDriverCardFactory.h  MotorDriverException.h  MotorReferenceSwitchData.h  MultiVariableWord.h  PowerMonitor.h  SignedIntConverter.h  TMC260Constants.h  TMC260DummyConstants.h  TMC260Words.h  TMC429Constants.h  TMC429DummyConstants.h  TMC429Words.h  (+1 more)
backend/src/: DFMC_MD22Dummy.cc  (+14 more)
build-aux/: generate-schema
cmake/: Doxyfile.in  Doxyfile.in.bak  Makefile.coverage.in  MotorDriverCardConfig.cmake.in.in  PROJECT_NAMEConfig.cmake.in.in  create_cmake_config_files.cmake  install_debian_package_at_DESY.sh.in  make_coverage.sh.in  make_debian_package.sh.in  mtca4u-MotorDriverCard-config.in  prepare_debian_package.cmake
doc/: Doxyfile  linear_stepper_motor.dox  mainpage.dox  stepper_motor.dox
examples/: CMakeLists.txt  basicStepperMotor.cpp
include/: BasicStepperMotor.h  DFMC-MD22Dummy.h  DFMC-MD22_Constants.h  DFMC_MD22Constants.h  DFMC_MD22Dummy.h  DummyDevice.h  GeneralStatus.h  LinearStepperMotor.h  Logger.h  LoggerMacros.h  MotorControler.h  MotorControlerConfig.h  MotorControlerConfigDefaults.h  MotorControlerDummy.h  MotorControlerExpert.h  MotorControlerImpl.h  MotorController.h  MotorDriverCard.h  MotorDriverCardConfig.h  MotorDriverCardConfigXML.h  MotorDriverCardDummy.h  MotorDriverCardExpert.h  MotorDriverCardFactory.h  MotorDriverCardImpl.h  MotorDriverException.h  MotorReferenceSwitchData.h  MultiVariableRegister.h  MultiVariableWord.h  NotImplementedException.h  OutOfRangeException.h  PowerMonitor.h  SPIviaPCIe.h  SignedIntConverter.h  StateMachine.h  StatusGeneral.h  StepperMotor.h  StepperMotorCalibrationStatus.h  StepperMotorError.h  StepperMotorException.h  StepperMotorStateMachine.h  (+14 more)
mtca4u_steppermotor/: CMakeLists.txt
mtca4u_steppermotor/include/: LinearStepperMotor.h  StepperMotor.h  StepperMotorCalibrationStatus.h  StepperMotorError.h  StepperMotorStatus.h
mtca4u_steppermotor/src/: LinearStepperMotor.cc  StepperMotor.cc  StepperMotorCalibrationStatus.cc  StepperMotorError.cc  StepperMotorStatus.cc
src/: BasicStepperMotor.cc  DFMC_MD22Dummy.cc  DummyDevice.cc  GeneralStatus.cc  LinearStepperMotor.cc  Logger.cc  MotorControler.cc  MotorControlerConfig.cc  MotorControlerDummy.cc  MotorControlerImpl.cc  MotorDriverCardConfig.cc  MotorDriverCardConfigXML.cc  MotorDriverCardDummy.cc  MotorDriverCardFactory.cc  MotorDriverCardImpl.cc  MotorReferenceSwitchData.cc  MultiVariableRegister.cc  MultiVariableWord.cc  SPIviaPCIe.cc  SignedIntConverter.cc  StateMachine.cc  StatusGeneral.cc  StepperMotor.cc  StepperMotorCalibrationStatus.cc  StepperMotorError.cc  StepperMotorFactory.cc  StepperMotorStateMachine.cc  StepperMotorStatus.cc  StepperMotorWithReference.cc  StepperMotorWithReferenceStateMachine.cc  TMC429SPI.cc  TMC429Words.cc
steppermotor/: CMakeLists.txt
steppermotor/include/: BasicStepperMotor.h  LinearStage.h  LinearStepperMotor.h  LinearStepperMotorStateMachine.h  ReferenceStateMachine.h  ReferenceStepperMotor.h  RotaryStage.h  RotaryStageStateMachine.h  RotaryStepperMotor.h  RotaryStepperMotorStateMachine.h  StepperMotor.h  StepperMotorStateMachine.h  StepperMotorWithReference.h  StepperMotorWithReferenceStateMachine.h
steppermotor/src/: BasicStepperMotor.cc  LinearStage.cc  LinearStageStateMachine.cc  LinearStepperMotor.cc  LinearStepperMotorStateMachine.cc  ReferenceStateMachine.cc  ReferenceStepperMotor.cc  RotaryStage.cc  RotaryStageStateMachine.cc  RotaryStepperMotor.cc  RotaryStepperMotorStateMachine.cc  StepperMotorFactory.cc  StepperMotorStateMachine.cc  StepperMotorWithReference.cc  StepperMotorWithReferenceStateMachine.cc
tests/: DFMC_MD22_broken.map  DFMC_MD22_broken.mapp  DFMC_MD22_test.map  DFMC_MD22_test.mapp  MD22_on_DAMC2.dmap  MotorDriverCardConfig_complete_test.xml  MotorDriverCardConfig_first_half_test.xml  MotorDriverCardConfig_invalid_maximumAccelleration.xml  MotorDriverCardConfig_minimal_test.xml  MotorDriverCardConfig_second_half_full_test.xml  MotorDriverCardConfig_second_half_test.xml  backwards_compat.xlmap  compareXmlOutput.sh  custom_speed_and_curruent_limits.xml  dummies.dmap  mtcadummy_DFMC_MD22_mock.map  mtcadummy_DFMC_MD22_mock.mapp  newer_firmware_mapfile.map
(+85 files in other folders)
